# SpectralViewPlugin

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  conanfile.py
.github/workflows/: build.yml
res/: lineplot_resources.qrc
res/jstools/: globals.js
res/lineplot/: endmembers.js  lineplot.css  lineplot.html  lineplot.js  lineplot.ui.js  linesRGB.js
src/: Endmember.cpp  Endmember.h  EndmembersAction.cpp  EndmembersAction.h  EndmembersCheckDialog.cpp  EndmembersCheckDialog.h  EndmembersModel.cpp  EndmembersModel.h  GeneralAction.cpp  GeneralAction.h  GlobalSettingsAction.cpp  GlobalSettingsAction.h  LineplotPlugin.cpp  LineplotPlugin.h  LineplotPlugin.json  LineplotWidget.cpp  LineplotWidget.h  MainToolbarAction.cpp  MainToolbarAction.h  MapAction.cpp  MapAction.h  SettingsAction.cpp  SettingsAction.h  SpectralViewPlugin.cpp  SpectralViewPlugin.h  SpectralViewPlugin.json  ViewSettingsAction.cpp  ViewSettingsAction.h  WavelengthsRGBAction.cpp  WavelengthsRGBAction.h
